# cppprep

./: CMakeLists.txt  CommonIncludes.h  main.cpp
cppfeatures/: constexpr.h  invoke.h  lambda.h  layout_stride.h  structuredbinding.h  tuple.h
designpatterns/behavioural/: crtp.h  strategy.h  template.h
designpatterns/structural/: decorator.h
leetcode/: canjump.h  fractiontorecurringdecimal.h  generateallsubsets.h  issubsequence.h  klargest.h  lengthoflongeststring.h  lettercombinationsofaphonenumber.h  longestpalindromesubstring.h  longestsubarray.h  lrucache.h  medianoftwosortedarrays.h  openthelock.h  permutations.h  playerswithzeroonelosses.h  queueusingstacks.h  reversewords.h  samekeycard.h  subsets.h  textjustification.h  trappingrainwater.h  validsudoku.h  wordsearch.h
leetcode/dfs/: nqueens.h  numberofislands.h
leetcode/slidingwindow/: maxslidingwindow.h  slidingwindow.h
metaprogramming/: gcd.h
realworldproblems/: OrderBook.cpp  OrderBook.h  OrderBookWithMDSpan.h  allocator.h  vector_impl.h  vector_with_allocator.h
smartpointers/: Wallet.h  smartpointer.h
sockets/: epoll.h
synchronization/: SPSCQueue.h  cpu_pinning.h  doublylinkedlist.h  smartpointer.h
